--- a/marketingApp/pubspec.yaml
+++ b/marketingApp/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   firebase_helpers: ^0.2.0 
   firebase_core: ^0.5.0
   firebase_storage: ^4.0.0 
-
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
